--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.7
+  freezed: ^2.4.2
+  freezed_annotation: ^2.4.1
   go_router: ^10.1.0
+  json_annotation: ^4.8.1
   riverpod_annotation: ^2.1.2
 
 dev_dependencies:
@@ -21,6 +24,7 @@ dev_dependencies:
   custom_lint: ^0.5.2
   riverpod_lint: ^2.0.1
   very_good_analysis: ^5.0.0+1
+  json_serializable: ^6.7.1
 
 flutter:
   uses-material-design: true
