--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.3.7
-  freezed: ^2.4.2
+  freezed: ^2.4.1
   freezed_annotation: ^2.4.1
   go_router: ^10.1.0
   json_annotation: ^4.8.1
+  mockito: ^5.4.2
   riverpod_annotation: ^2.1.2
+  riverpod_test: ^0.1.3
 
 dev_dependencies:
   flutter_test:
