--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   mockito: ^5.4.2
   riverpod_annotation: ^2.1.2
   riverpod_test: ^0.1.3
+  collection: ^1.17.2
 
 dev_dependencies:
   flutter_test:
@@ -30,34 +31,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-
-  
-  
-  
-  
-
-  
-  
-
-  
-  
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
+  assets:
+    - assets/
